--- a/notebook/RenShape Tutorial.ipynb
+++ b/notebook/RenShape Tutorial.ipynb
@@ -667,7 +667,7 @@
     "\n",
     "    - Plot the Q vs atomic mass for the nuclides w/o an associated spectrum.\n",
     "    - Plot the neutrino spectrum of 235U using the continuum spectra for 100Rb instead of the one from ENSDF.\n",
-    "    - Try to recreate a plot similar the one in notebook/ex.pdf"
+    "    - Try to recreate a plot similar the one in notebook/example.pdf"
    ]
   }
  ],
